[gd_scene load_steps=14 format=3 uid="uid://shopscene123"]

[ext_resource type="Script" path="res://Scripts/ShopManager.gd" id="1_script_manager"]
[ext_resource type="PackedScene" uid="uid://player123" path="res://Scenes/Player.tscn" id="2_player"]
[ext_resource type="PackedScene" uid="uid://wall123" path="res://Scenes/Wall.tscn" id="3_wall"]
[ext_resource type="PackedScene" path="res://Scenes/Prop.tscn" id="4_prop"]
[ext_resource type="Texture2D" uid="uid://bgjrg23a0u72c" path="res://Assets/Sprites/logo_shop.svg" id="5_logo_shop"]
[ext_resource type="Texture2D" uid="uid://dxihbl6j2rwg1" path="res://Assets/Sprites/logo_weapon.svg" id="6_logo_weapon"]
[ext_resource type="Texture2D" uid="uid://bwmbxl04uktew" path="res://Assets/Sprites/bookshelf.svg" id="7_bookshelf"]
[ext_resource type="Texture2D" uid="uid://do80ekbih5ms6" path="res://Assets/Sprites/table.svg" id="8_table"]
[ext_resource type="Texture2D" path="res://Assets/Sprites/logo_mission.svg" id="9_logo_mission"]
[ext_resource type="PackedScene" path="res://Scenes/Hotbar.tscn" id="10_hotbar"]
[ext_resource type="PackedScene" path="res://Scenes/MoneyDisplay.tscn" id="11_money"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_zone"]
size = Vector2(100, 100)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.35, 0.35, 0.35, 0.9)

[node name="ShopScene" type="Node2D"]
script = ExtResource("1_script_manager")

[node name="CustomerSpawnPoint" type="Marker2D" parent="."]
position = Vector2(100, 600)

[node name="Floor" type="ColorRect" parent="."]
offset_left = -2000.0
offset_top = -2000.0
offset_right = 2000.0
offset_bottom = 2000.0
color = Color(0.5, 0.5, 0.5, 1)

[node name="Decorations" type="Node2D" parent="."]

[node name="Bookshelf1" parent="Decorations" instance=ExtResource("4_prop")]
position = Vector2(300, 150)
modulate = Color(0.6, 0.6, 0.6, 1)

[node name="Sprite2D" parent="Decorations/Bookshelf1" index="0"]
texture = ExtResource("7_bookshelf")

[node name="Table1" parent="Decorations" instance=ExtResource("4_prop")]
position = Vector2(800, 500)
modulate = Color(0.6, 0.6, 0.6, 1)

[node name="Sprite2D" parent="Decorations/Table1" index="0"]
texture = ExtResource("8_table")

[node name="Table2" parent="Decorations" instance=ExtResource("4_prop")]
position = Vector2(1000, 500)
modulate = Color(0.6, 0.6, 0.6, 1)

[node name="Sprite2D" parent="Decorations/Table2" index="0"]
texture = ExtResource("8_table")

[node name="Walls" type="Node2D" parent="."]

[node name="Wall" parent="Walls" instance=ExtResource("3_wall")]
position = Vector2(640, 50)
scale = Vector2(20, 1)

[node name="Wall2" parent="Walls" instance=ExtResource("3_wall")]
position = Vector2(640, 1200)
scale = Vector2(20, 1)

[node name="Wall3" parent="Walls" instance=ExtResource("3_wall")]
position = Vector2(-200, 600)
scale = Vector2(1, 20)

[node name="Wall4" parent="Walls" instance=ExtResource("3_wall")]
position = Vector2(1500, 600)
scale = Vector2(1, 20)

[node name="CounterZone" type="Area2D" parent="."]
position = Vector2(640, 200)
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="CounterZone"]
shape = SubResource("RectangleShape2D_zone")

[node name="Sprite2D" type="Sprite2D" parent="CounterZone"]
modulate = Color(0.7, 0.7, 0.7, 1)
scale = Vector2(0.8, 0.8)
texture = ExtResource("5_logo_shop")

[node name="UpgradeZone" type="Area2D" parent="."]
position = Vector2(200, 360)
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpgradeZone"]
position = Vector2(2, 0)
shape = SubResource("RectangleShape2D_zone")

[node name="Sprite2D" type="Sprite2D" parent="UpgradeZone"]
modulate = Color(0.7, 0.7, 0.7, 1)
scale = Vector2(0.8, 0.8)
texture = ExtResource("6_logo_weapon")

[node name="MissionZone" type="Area2D" parent="."]
position = Vector2(1000, 360)
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="MissionZone"]
shape = SubResource("RectangleShape2D_zone")

[node name="Sprite2D" type="Sprite2D" parent="MissionZone"]
modulate = Color(0.7, 0.7, 0.7, 1)
scale = Vector2(0.8, 0.8)
texture = ExtResource("9_logo_mission")

[node name="Player" parent="." instance=ExtResource("2_player")]
position = Vector2(640, 600)

[node name="UI_Layer" type="CanvasLayer" parent="."]

[node name="InteractionLabel" type="Label" parent="UI_Layer"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = -77.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.2, 1)
theme_override_constants/outline_size = 4
text = "Press 'E' to Interact"
horizontal_alignment = 1

[node name="BobaPanel" type="Panel" parent="UI_Layer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="CloseBoba" type="Button" parent="UI_Layer/BobaPanel"]
layout_mode = 0
offset_left = 350.0
offset_top = 10.0
offset_right = 390.0
offset_bottom = 41.0
text = "X"

[node name="UpgradePanel" type="Panel" parent="UI_Layer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="CloseUpgrade" type="Button" parent="UI_Layer/UpgradePanel"]
layout_mode = 0
offset_left = 260.0
offset_top = 10.0
offset_right = 290.0
offset_bottom = 41.0
text = "X"

[node name="MissionPanel" type="Panel" parent="UI_Layer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="CloseMission" type="Button" parent="UI_Layer/MissionPanel"]
layout_mode = 0
offset_left = 260.0
offset_top = 10.0
offset_right = 290.0
offset_bottom = 41.0
text = "X"

[node name="Hotbar" parent="UI_Layer" instance=ExtResource("10_hotbar")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0

[node name="MoneyDisplay" parent="UI_Layer" instance=ExtResource("11_money")]
layout_mode = 3
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 60.0

[editable path="Decorations/Bookshelf1"]
[editable path="Decorations/Table1"]
[editable path="Decorations/Table2"]
